# Pablo

./: .gitattributes  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  DECISIONS.md  LICENSES.md  README.md  vcpkg.json
.github/workflows/: ci.yml  dedup-ci.yml
docs/: BUILD.md  DECISIONS.md  EXTENDING.md  FUTURE_WORK.md  PICASA_PARITY.md  TESTING.md
docs/specs/: 01-import-and-acquisition.md  05-organize-and-metadata-tests.md  09-search-and-discovery.md
eval/: .gitignore  README.md  common.py  config.yaml  requirements.txt  run.py
eval/detect/: yunet.py
eval/embed/: arcface_onnx.py  base.py  dlib_resnet.py  eigenface.py  hog_baseline.py  sface.py  timm_face.py
eval/experiments/: cluster_gridsearch.py  detector_bakeoff.py  fit_eigenface.py  projection_head.py  sface_boost.py
eval/ingest/: .gitignore  README.md  build_face_db.py  contacts_xml.py  picasa_ini.py  raw_preview.py  xmp_regions.py
eval/ingest/tests/: test_build_face_db.py  test_picasa_ini.py  test_rect64.py
eval/metrics/: clustering.py  identification.py  operating_point.py  verification.py
eval/report/: reporter.py
eval/retrieval/: compare_fp16.py  eval_siglip2.py  export_siglip2.py  make_fixtures.py  prune_vocab.py  spike_siglip2.py
eval/tests/: test_sanity.py
eval/tools/: download_models.sh
native/core/: CMakeLists.txt
native/core/benchmarks/: CMakeLists.txt  bench_placeholder.cpp
native/core/include/: photo_core.h  photo_core_version.h
native/core/src/api/: c_api.cpp
native/core/src/catalog/: catalog.cpp  catalog.h
native/core/src/codec/: codec.cpp  codec.h
native/core/src/edit/: edit_spec.cpp  edit_spec.h  render.cpp  render.h
native/core/src/exif/: exif.cpp  exif.h
native/core/src/faces/: align.cpp  align.h  cluster.cpp  cluster.h  detector.cpp  detector.h  embed.cpp  embed.h  face_service.cpp  face_service.h  model_registry.h  prototype.cpp  prototype.h  store.cpp  store.h  types.h
native/core/src/runtime/: analyzer.h  engine.cpp  engine.h  event_ring.cpp  event_ring.h  job_system.cpp  job_system.h  slot_store.cpp  slot_store.h
native/core/src/semantic/: embedder.cpp  embedder.h  onnx_embedder.cpp  semantic_search.cpp  semantic_search.h  semantic_service.cpp  semantic_service.h
native/core/src/thumb/: slot.cpp  slot.h  thumb_cache.cpp  thumb_cache.h  thumb_service.cpp  thumb_service.h
native/core/src/util/: log.cpp  log.h
native/core/src/video/: video_io.cpp  video_io.h
native/core/src/xmp/: face_xmp.cpp  face_xmp.h
native/core/tests/: CMakeLists.txt  album_test.cpp  c_api_organize_test.cpp  catalog_test.cpp  catalog_v9_test.cpp  codec_test.cpp  collage_test.cpp  compact_test.cpp  edit_c_api_test.cpp  edit_integration_test.cpp  edit_test.cpp  exif_extract_test.cpp  export_options_test.cpp  face_pipeline_test.cpp  face_store_test.cpp  geo_test.cpp  hidden_test.cpp  import_test.cpp  metadata_storage_test.cpp  metadata_test.cpp  organize_state_test.cpp  organize_test.cpp  rebase_test.cpp  runtime_test.cpp  semantic_onnx_test.cpp  semantic_test.cpp  smart_test.cpp  smoke_test.cpp  tags_test.cpp  thumb_cache_test.cpp  video_io_test.cpp  xmp_test.cpp
native/core/tests/fixtures/: exif_full.golden.json  make_exif_fixture.py
native/dedup/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.example.yaml  vcpkg.json
native/dedup/cmake/: FindOnnxRuntime.cmake
native/dedup/include/dedup/: cluster.h  config.h  decode.h  embed.h  index.h  ingest.h  log.h  parallel.h  pipeline.h  server.h  store.h  types.h
native/dedup/src/: cluster.cpp  config.cpp  decode.cpp  embed.cpp  index.cpp  ingest.cpp  log.cpp  main.cpp  pipeline.cpp  server.cpp  store.cpp
native/dedup/tools/: export_sscd_to_onnx.py
native/dedup/web/: app.js  index.html  style.css
native/models/: MANIFEST.md
pablo/: CLAUDE.md  README.md  pubspec.yaml
pablo/android/app/: build.gradle
pablo/ios/Runner/: Info.plist
pablo/ios/Runner.xcodeproj/: project.pbxproj
pablo/lib/: main.dart
pablo/lib/app/: app_scope.dart  app_state.dart  key_actions.dart  pablo_app.dart
pablo/lib/backend/: native_backend.dart  prefetch_controller.dart
pablo/lib/components/: autocomplete_input.dart  avatar.dart  context_menu.dart  dialog_option.dart  hover_surface.dart  nav_item.dart  pablo_badge.dart  pablo_button.dart  pablo_checkbox.dart  pablo_icon.dart  pablo_icon_button.dart  pablo_radio.dart  pablo_slider.dart  pablo_text_field.dart  resize_handle.dart  section_header.dart
pablo/lib/data/: app_config.dart  aspect_store.dart  boot.dart  caption_store.dart  catalog_maintenance.dart  constants.dart  face_repository.dart  file_ops.dart  folder_prefs.dart  library.dart  library_import.dart  library_location.dart  library_mover.dart  mock_data.dart  model_fetcher.dart  models.dart  models_dir.dart  move_service.dart  (+9 more)
pablo/linux/: CMakeLists.txt
pablo/test/: advanced_search_modal_test.dart  asset_id_test.dart  batch_rename_modal_test.dart  batch_rename_test.dart  collage_layouts_test.dart  compare_view_test.dart  context_menu_test.dart  curves_editor_test.dart  dedup_scanner_test.dart  edit_permute_test.dart  edit_session_test.dart  edit_spec_test.dart  export_controller_test.dart  export_dialog_test.dart  external_actions_test.dart  face_crop_test.dart  file_ops_test.dart  find_duplicates_flow_test.dart  first_run_indexing_screen_test.dart  folder_drop_target_test.dart  folder_ops_test.dart  folder_prefs_test.dart  fuzzy_match_test.dart  gallery_scroll_math_test.dart  gallery_sort_test.dart  gallery_virtualization_test.dart  hidden_filter_test.dart  image_dims_test.dart  indexing_controller_test.dart  justified_rows_test.dart  key_actions_test.dart  kml_export_test.dart  library_location_test.dart  library_mover_test.dart  lightbox_nav_test.dart  map_data_test.dart  model_download_stage_test.dart  model_fetcher_test.dart  models_dir_test.dart  move_palette_test.dart  (+27 more)
pablo/web/: index.html  manifest.json
pablo/windows/: CMakeLists.txt
tools/: setup-plugin-symlinks.sh
tools/faces_standalone/: CMakeLists.txt  gen_gt_tsv.py  main.cpp
tools/scroll_harness/: README.md  pubspec.yaml
(+176 files in other folders)
